--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "BDD",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -u bdd -R spec -t 500 --recursive"
+    "test": "mocha -u bdd -R spec -t 500 --recursive",
+    "watch": "mocha -u bdd -R spec -t 500 --recursive --watch"
   },
   "repository": {
     "type": "git",
